Fixed whitespace bug on avatars

--- a/static/less/dash.less
+++ b/static/less/dash.less
@@ -96,6 +96,7 @@ noscript p {
     position: absolute;
     margin-left: -100px;
     margin-top: -20px;
+    text-decoration: none; // Fixes annoying whitespace bug
 }
 
 .meta .avatar:after {
